--- a/index.html
+++ b/index.html
@@ -275,13 +275,12 @@
             </div>
 
 
-        <!--Footer-->
-
-        <footer class="footer">
+       
+    <footer class="footer">
             <div class="content-1170 center-relative">
                 <ul>
                     <li class="left-footer-content">
-                         <i class="fa fa-heart"></i> by <a href="https://off-to-space.github.io/MAIN-PAGE/" target="_blank">Off to Space</a>.
+                         <i class="fa fa-heart"></i> by <a href="" target="_blank">Off to Space</a>.
                     </li>
                     <li class="center-footer-content">
                         <a href="index.html">
@@ -289,12 +288,13 @@
                         </a>
                     </li>
                     <li class="right-footer-contnet">
-                        <a href="#">BIBLIOOGRAPHY</a>
-                        <a href="#">TEAM MEMBERS</a>
+                        <a href="https://off-to-space.github.io/quiz/">Quiz</a>
+                        <a href="https://off-to-space.github.io/BIBLIOGRAPHY/">Bibliography</a>
+                        <a herf="https://off-to-space.github.io/TEAM/">Team</a>
 
                     </li>
                     <li class="left-footer-content mobile">
-                         <i class="fa fa-heart"></i> by <a href="https://off-to-space.github.io/MAIN-PAGE/" target="_blank">Off to Space</a>.
+                         <i class="fa fa-hert"></i><a href="" target="_blank"></a>.
                     </li>
                 </ul>
             </div>
